--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -8,13 +8,17 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-footer{
+  margin-bottom: 0px;
 }
 
 .App-link {
