--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -7,14 +7,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  height: 5%;
+  max-height: 5%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: limegreen;
+  margin: 0px;
 }
 
 .App-footer{
@@ -25,4 +25,8 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.App-Nav{
+  color: white;
 }
